--- a/style.css
+++ b/style.css
@@ -444,9 +444,6 @@ sup{
       flex-wrap: wrap;
       justify-content: space-between;
      }
-     .hot_releases{
-
-     }
     .colored-hr {
       height: 3px; 
       background: linear-gradient(to right, #0a7761 30%, #ddd 30%); 
@@ -594,9 +591,12 @@ sup{
   text-align: center;
   border-top: 1px solid rgb(220, 226, 226);
   padding: 15px;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: whitesmoke;
-  color: rgb(172, 167, 167);
+  color: rgb(150, 145, 145);
   margin: 0px 85px
+  
 }
 .footerAddress a,
 h3 {
@@ -604,3 +604,111 @@ h3 {
 }
    
 
+/* shop .html starts for Css starts */
+.shop_index{
+  /* border: 1px solid; */
+  background-color: rgb(228, 222, 222);
+  padding: 15px 0px 15px 80px;
+  color: black;
+}
+
+.shop_pages{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page1{
+  background-color: rgb(4, 109, 104);
+  padding: 6px ;
+  border-radius: 3px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+}
+.page2{
+  font-weight: bold;
+  font-size: 15px;
+  padding: 6px ;
+  margin: 0px 3px;
+}
+/* My accounts starts */
+.account_section{
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
+}
+    .accountSidebar {
+      width: 300px;
+      border-radius: 5px;
+    }
+
+    .accountSidebar li {
+      padding: 15px;
+      font-size: 16px;
+      color: rgb(50, 50, 50);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      background-color: rgb(255, 255, 255);
+      border: 1px solid rgb(230, 230, 230);
+      cursor: pointer;
+    }
+
+    .accountSidebar li i {
+      color: rgb(100, 100, 100);
+      font-size: 16px;
+    }
+
+    .accountSidebar .active {
+      background-color: rgb(0, 105, 92);
+      color: white;
+    }
+
+    .account_roise{
+      border: 1px solid lightgray;
+      border-radius: 2px;
+      width: 70%;
+      height: 150px;
+      /* padding: 15px 10px 10px 20px; */
+    }
+    .account_roise h6{
+      background-color: rgb(209, 206, 206);
+      padding: 15px 10px 10px 20px;
+      font-weight: bold;
+    }
+    .account_roise p{
+      padding: 15px 10px 10px 20px;
+      color: rgb(56, 75, 56);
+    }
+    /* My accounts ends*/
+    /* login  starts*/
+   .login_register{
+    display: flex;
+    justify-content: space-between;
+   }
+    .login_details{
+      border: 2px solid rgb(226, 223, 223);
+      padding: 20px;
+      border-radius: 4px;
+      width: 45%;
+      height: 290px;
+      /* width: 500px; */
+    }
+    .email_pass{
+      border: 1px solid rgb(226, 223, 223);
+      border-radius: 4px;
+      padding: 10px;
+    }
+    .login_submit{
+      background-color: rgb(4, 131, 93);
+      color: white;
+      border: none;
+      font-weight: 500;
+    }
+    .create_account{
+      border: 2px solid rgb(226, 223, 223);
+      padding: 20px;
+      border-radius: 4px;
+      width: 53%;
+    }
+    /* login  ends*/
