--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ a{
     text-decoration: none;
 }
 a:hover{
-    color: rgb(11, 189, 192);
+    color: rgb(8, 161, 103);
     text-shadow: 1px white;
 }
 .input_bar{
@@ -76,10 +76,22 @@ sup{
 }
 .pro_h1{
     font-weight: 700;
-    color: rgb(5, 125, 134);
+    color: rgb(5, 134, 84);
 }
 .pro_1{
     color: rgb(37, 36, 36);
+}
+.pro_but{
+  background-color: rgb(7, 105, 68);
+  border: none;
+  color: white;
+  font-weight: 500;
+}
+.pro_but:hover{
+ border: 3px solid rgb(5, 128, 97);
+ color: black;
+ font-weight: bold;
+ background: none;
 }
 /* hot promotions ends */
 
@@ -91,7 +103,7 @@ sup{
     font-size: 20px;
  }
  .popular{
-    color: rgb(7, 138, 138);
+    color: rgb(7, 138, 99);
  }
  .angle{
     display: flex;
@@ -463,12 +475,12 @@ sup{
     }
     .showcase_price{
       /* font-weight: 550; */
-      font-size: 18px;
+      font-size: 15px;
       color: rgb(7, 120, 128);
     }
     .showcase_del{
-      font-size: 18px;
-      color: grey;
+      font-size: 14px;
+      color: rgb(122, 119, 119);
     }
 
 .footerHeader {
