--- a/style.css
+++ b/style.css
@@ -529,10 +529,12 @@ sup{
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 40px 50px;
-  margin: 0px 35px;
+  padding: 40px 0px;
+  /* margin: 0px 35px; */
   background: #fff;
   font-size: 18px;
+  width: 100%;
+  
   
 }
 
@@ -700,3 +702,5 @@ h3 {
       width: 53%;
     }
     /* login  ends*/
+    /* compare starts */
+    
