--- a/style.css
+++ b/style.css
@@ -30,12 +30,13 @@ a:hover{
     border: 1px solid lightgrey;
     box-shadow: 1px 1px 2px lightgray;
     border-radius: 5px;
-    padding: 10px 50px 10px 5px;
+    padding: 10px 20px 10px 5px;
 
     /* width: 50px; */
     
 }
-input{
+.Home_inp{
+    /* padding-right: 20px; */
     outline: none;
     border: none;
     /* width: 100px; */
